Balthasar won't think his sheep are missing unless some of them are actually dead, so he won't mention it when avoiding the seekers.
Balthasar's sheep properly move to Bengar's farm with him, instead of being duplicated.
Baltram can only be asked about Akils farm if NH does yet know how to find it.
Bandit 10008 warns NH not to wake up Skinner only if he has not already done so.
Bartok now grants previously omitted XP bonus for finishing the hunt with him.
Bartok occasional muttering about the orc fixed.
Bartok only equips his hunting gear while hunting.
Bartok wears a Rough Bastard Sword instead of Machete.
Bengar always notices return of Pardos.
Bengar can immediately be told to let Baltasar back on his pastures after getting rid of the militia.
Bengar can only be asked about Onar after asking how does he make a living.
Bengar can only be asked about the missing people if they have not been returned yet.
Bengar returns to his normal routine after the militia are gone.
Bennet cannot be given the magic ore or asked about his standing between farmers and mercenaries when he is in prison.
Bennet grants a small amount of experience for finding the magic ore nuggets for him.
Bennet makes NH dragon hunter only after giving the armor.
Bennet will only give a map of Khorinis caves if NH does not already have it and Brahim is dead or otherwise a previously unused voice line is used to tell NH to go buy it himself.
Bennet will only sell Minecrawler Belt once NH has received the armor.
Betsy gives no experience when killed.
Betsy stays with Opolos in the monastery once brought there, instead of going back to Pepe.
Betsy will always disappear if NH gets too far away from her, instead of sometimes appearing back at Pepe's.
Biff can be asked to rejoin the crew in the Valley of Mines after refusing him.
Biff can only be hired after asking what is he doing in the Valley of Mines.
Biff does not grant NH experience before he is hired.